# Programming-Parallel-Supercomputers

./: README.md
GPU/: hello_class.cu  job_BA.sh  job_hello_class.sh  job_vecAdd_CPU.sh  job_vecAdd_GPU.sh
Hybrid/: OMP_MPI_1.c  OMP_MPI_2.c  OMP_MPI_3.c  OMP_MPI_3_correct.c  job_MPIs_MPI_1.sh  job_MPIs_MPI_2.sh  job_MPIs_MPI_3.sh  job_OMP_MPI_1.sh  job_OMP_MPI_2.sh  job_OMP_MPI_3.sh  job_hello.sh
MPI/: Coll_1.c  Comm_1.c  Datat_1.c  Datat_2.c  MPI_SR_1.c  MPI_SR_2.c  MPI_SR_3.c  MPI_SR_6.c  MPI_SR_7.c  MPI_loctime.c  One_sided_3.c  hello_class  job_Coll_1.sh  job_Comm_1.sh  job_Datat_1.sh  job_Datat_2.sh  job_MPI_SR_1.sh  job_MPI_SR_2.sh  job_MPI_SR_3.sh  job_MPI_SR_4.sh  job_MPI_SR_5.sh  job_MPI_SR_6.sh  job_MPI_SR_7.sh  job_MPI_SR_8.sh  job_MPI_loctime.sh  job_Multi.sh  job_One_sided_1.sh  job_One_sided_2.sh  job_One_sided_3.sh  job_Split_1.sh  job_Split_2.sh  job_hello_class.sh  job_synchro.sh  slurm-12868959.out  slurm-12869123.out  slurm-12869141.out  slurm-12869142.out  slurm-12869203.out  slurm-12869234.out  slurm-12869248.out  (+1 more)
exercise_sheets/: README.md
exercise_sheets/sheet1/: README.md  advec_wave_2D.c  p2p.c  phys_appl.md  plot_different_nodes.py  plot_same_node.py  point_to_point.c  run_advec.sh  run_p2p.sh  sheet.md  sheet1_report.docx
exercise_sheets/sheet2/src/: CMakeLists.txt  main.cpp  quicksort.cpp  quicksort_distributed.cpp
instructions/: LUMI_setup.txt  Triton_setup.txt
python/: README.md  visualize_example.py
scripts/: gen_exercise_and_solution_folders.py  job_CPU_example.sh  job_GPU_example.sh  job_hybrid_example.sh
(+20 files in other folders)
